--- a/ex15/src/main/resources/application.yaml
+++ b/ex15/src/main/resources/application.yaml
@@ -19,27 +19,13 @@ management:
 spring:
   jmx:
     enabled: true
-  r2dbc:
-    url: r2dbc:postgresql://localhost:5433/db
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    password: postgres
     username: postgres
-    password: postgres
-  flyway:
-    schema: public
     url: jdbc:postgresql://localhost:5433/db
-    user: postgres
-    password: postgres
-  main:
-    allow-bean-definition-overriding: true
 
-jwt:
-  private.key: classpath:app.key
-  public.key: classpath:app.pub
 
-  #  datasource:
-  #    driver-class-name: org.postgresql.Driver
-  #    password: 1
-  #    username: postgres
-  #    url: jdbc:postgresql://localhost/mydb
 
   #  datasource:
   #    driver-class-name: org.h2.Driver
@@ -48,15 +34,15 @@ jwt:
   #    url: jdbc:h2:mem:hw
 
 
-#  jpa:
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-#    hibernate:
-#      ddl-auto: none
-#  sql:
-#    init:
-#      mode: always
-#      schema-locations: classpath*:db/schema.sql
-#      data-locations: classpath*:db/data.sql
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    hibernate:
+      ddl-auto: create
+  sql:
+    init:
+      mode: always
+      data-locations: classpath*:db/data.sql
+      schema-locations: classpath*:db/schema.sql
