--- a/ex15/docker-compose.yaml
+++ b/ex15/docker-compose.yaml
@@ -7,12 +7,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      - SPRING_FLYWAY_URL=jdbc:postgresql://postgres:5432/db
-      - SPRING_FLYWAY_USERNAME=postgres
-      - SPRING_FLYWAY_PASSWORD=postgres
-      - SPRING_R2DBC_URL=r2dbc:postgresql://postgres:5432/db
-      - SPRING_R2DBC_USERNAME=postgres
-      - SPRING_R2DBC_PASSWORD=postgres
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/db
 
   postgres:
     image: "postgres"
