--- a/ex17/ex17_sequrity/Dockerfile
+++ b/ex17/ex17_sequrity/Dockerfile
@@ -1,4 +1,4 @@
 FROM bellsoft/liberica-openjdk-alpine-musl:21.0.1
-COPY /target/corners.jar /app/app.jar
+COPY /target/sequrity.jar /app/app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
