--- a/ex17/ex17_sequrity/pom.xml
+++ b/ex17/ex17_sequrity/pom.xml
@@ -11,10 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version> <!--
-        не работает на свежей версии. Так работает.
-        Заниматься переустановкй postgree, он на него жалуется не стал
-        Если все заработает, в лекции был механизм, как поднялся Postgree, до него пока не дошел(пока не понял) -->
+        <version>3.1.0</version>
         <relativePath/>
     </parent>
 
@@ -30,22 +27,6 @@
     </properties>
 
     <dependencies>
-        <!--
-                <dependency>
-                    <groupId>org.mapstruct</groupId>
-                    <artifactId>mapstruct</artifactId>
-                    <version>1.6.3</version>
-                </dependency>
-        -->
-
-        <!--
-                <dependency>
-                    <groupId>org.projectlombok</groupId>
-                    <artifactId>lombok-mapstruct-binding</artifactId>
-                    <version>0.2.0</version>
-                </dependency>
-        -->
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -91,11 +72,6 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
 
-        </dependency>
-
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
         </dependency>
 
         <dependency>
@@ -195,31 +171,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <annotationProcessorPaths>
-                        <!--
-                                                <path>
-                                                    <groupId>org.mapstruct</groupId>
-                                                    <artifactId>mapstruct-processor</artifactId>
-                                                    <version>1.6.3</version>
-                                                </path>
-                        -->
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <!-- если убрать версию, то вообще все перестает даже компилироваться.
-                            Версию взаял из примера, когда пытался заставить работать -->
                             <version>1.18.32</version>
                         </path>
-                        <!--
-                                                <path>
-                                                    <groupId>org.projectlombok</groupId>
-                                                    <artifactId>lombok-mapstruct-binding</artifactId>
-                                                    <version>0.2.0</version>
-                                                </path>
-                        -->
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>corners</finalName>
+        <finalName>sequrity</finalName>
     </build>
 </project>
