--- a/ex17/ex17_db/docker-compose.yaml
+++ b/ex17/ex17_db/docker-compose.yaml
@@ -1,5 +1,19 @@
 services:
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+    environment:
+      - SPRING_FLYWAY_URL=jdbc:postgresql://postgres:5432/db
+      - SPRING_FLYWAY_USERNAME=postgres
+      - SPRING_FLYWAY_PASSWORD=postgres
+      - SPRING_R2DBC_URL=r2dbc:postgresql://postgres:5432/db
+      - SPRING_R2DBC_USERNAME=postgres
+      - SPRING_R2DBC_PASSWORD=postgres
+
   postgres:
     image: "postgres"
     ports:
@@ -8,3 +22,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=db
+    networks:
+          - bdnet
+
+networks:
+  bdnet:
+    driver: bridge
