--- a/ex17/ex17_db/pom.xml
+++ b/ex17/ex17_db/pom.xml
@@ -122,6 +122,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>corners</finalName>
+        <finalName>db</finalName>
     </build>
 </project>
