--- a/ex17/ex17_sequrity/docker-compose.yaml
+++ b/ex17/ex17_sequrity/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     ports:
       - 8080:8080
     environment:
-      - SPRING_FLYWAY_URL=jdbc:postgresql://postgres:5432/db
-      - SPRING_FLYWAY_USERNAME=postgres
-      - SPRING_FLYWAY_PASSWORD=postgres
       - SPRING_R2DBC_URL=r2dbc:postgresql://postgres:5432/db
-      - SPRING_R2DBC_USERNAME=postgres
-      - SPRING_R2DBC_PASSWORD=postgres
+    networks:
+      - ex17_db_bdnet
+networks:
+  ex17_db_bdnet:
+    external: true
