--- a/ex17/ex17_sequrity/src/main/resources/application.yaml
+++ b/ex17/ex17_sequrity/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 logging:
   level:
-    ru.otus.hw.ex15.*: DEBUG
+    ru.otus.hw.ex17_sequrity.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
     org.springframework.security: DEBUG
 
