--- a/ex17/ex17_user/pom.xml
+++ b/ex17/ex17_user/pom.xml
@@ -94,11 +94,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
             <version>0.8.13.RELEASE</version>
@@ -220,6 +215,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>corners</finalName>
+        <finalName>user</finalName>
     </build>
 </project>
