--- a/ex17/ex17_user/src/main/resources/application.yaml
+++ b/ex17/ex17_user/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
+server:
+  port: 8081
+
 logging:
   level:
-    ru.otus.hw.ex15.*: DEBUG
+    ru.otus.hw.ex17_user.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
     org.springframework.security: DEBUG
 
@@ -17,47 +20,14 @@ management:
       enabled: true
 
 spring:
-  data:
-    rest:
-      base-path: /datarest
   jmx:
     enabled: true
   r2dbc:
     url: r2dbc:postgresql://localhost:5433/db
     username: postgres
     password: postgres
-  flyway:
-    schema: public
-    url: jdbc:postgresql://localhost:5433/db
-    user: postgres
-    password: postgres
 
 jwt:
   private.key: classpath:app.key
   public.key: classpath:app.pub
 
-  #  datasource:
-  #    driver-class-name: org.postgresql.Driver
-  #    password: 1
-  #    username: postgres
-  #    url: jdbc:postgresql://localhost/mydb
-
-  #  datasource:
-  #    driver-class-name: org.h2.Driver
-  #    password: ''
-  #    username: sa
-  #    url: jdbc:h2:mem:hw
-
-
-#  jpa:
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-#    hibernate:
-#      ddl-auto: none
-#  sql:
-#    init:
-#      mode: always
-#      schema-locations: classpath*:db/schema.sql
-#      data-locations: classpath*:db/data.sql
