--- a/ex17-spring-cloud/eureka-server/src/main/resources/application.yml
+++ b/ex17-spring-cloud/eureka-server/src/main/resources/application.yml
@@ -1,30 +1,20 @@
 spring:
   application:
-    name: api-gateway
-
-
+    name: eureka-server
 server:
-  port: 7777
-
-application:
-  api-routes:
-    - id: "service-client"
-      from: "client"
-      to: "lb://SERVICE-CLIENT"
-    - id: "service-order"
-      from: "order"
-      to: "lb://SERVICE-ORDER"
+  port: 9999
 
 eureka:
+  server:
+    renewal-percent-threshold: 0.5
+  instance:
+    hostname: localhost
+    lease-expiration-duration-in-seconds: 90
   client:
     registerWithEureka: false
-    fetchRegistry: true
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://localhost:9999/eureka/
-  instance:
-    lease-renewal-interval-in-seconds: 30
-    metadataMap:
-      zone: zone1
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 management:
   tracing:
