--- a/ex17/pom.xml
+++ b/ex17/pom.xml
@@ -27,6 +27,7 @@
         <module>ex17_sequrity</module>
         <module>ex17_user</module>
         <module>ex17_db</module>
+        <module>ex17-config-server</module>
     </modules>
 
 </project>
