--- a/ex17-spring-cloud/config-server/src/main/resources/application.yml
+++ b/ex17-spring-cloud/config-server/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
     config:
       server:
         git:
-          uri: "git@github.com:chabandenis/hw.git"
-          search-paths: "pull/19/files/git-config"
-          ignoreLocalSshSettings: false
-          strictHostKeyChecking: false
+            uri: "https://github.com/chabandenis/hw.git"
+            search-paths: "ex17/git-config"
+            ignoreLocalSshSettings: false
+            strictHostKeyChecking: false
 management:
   tracing:
     sampling:
